--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="manifest" href="./manifest.json">
+    </head>
     <body>
         <h1>Test gitbhub page, hoping it's https</h1>
     </body>
