--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     </head>
     <body>
         <h1>Test gitbhub page, hoping it's https</h1>
+        <button onclick="sendMessageToSw()">Click me</button>
     </body>
 
     <script>
 
+        function sendMessageToSw()
+        {
+            console.log('send message...');
+        }
+
 async function registerSW() { 
   if ('serviceWorker' in navigator) { 
-    try {
-      await navigator.serviceWorker.register('./sw.js'); 
+    try 
+    {
+        console.log("registering service worker.")
+        await navigator.serviceWorker.register('./sw.js'); 
+        console.log("registered service worker.")
+
+        navigator.serviceWorker.addEventListener('message', event => {
+            // event is a MessageEvent object
+            console.log(`The service worker sent me a message: ${event.data}`);
+        });
+
+
     } catch (e) {
       alert('ServiceWorker registration failed. Sorry about that.'); 
     }
