--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         function sendMessageToSw()
         {
-            console.log(`send message...${new Date().toLocaleString()}`);
+            console.log(`sending message with data...${new Date().toLocaleString()}`);
+            sw.postMessage(`Hi worker, here is data: ${new Date().toLocaleString()}`);
         }
 
 
@@ -33,8 +34,9 @@ async function registerSW() {
 
 
         navigator.serviceWorker.ready.then( registration => {
-    registration.active.postMessage("Hi service worker");
-  });
+            sw = registration.active;
+            registration.active.postMessage("Hi service worker");
+        });
 
 
     } catch (e) {
